--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,7 +110,7 @@
 
     <!-- SyncAdapter related -->
     <string name="sync_account_type">sunshine.example.com</string>
-    <string name="content_authority">com.example.android.sunshine.app</string>
+    <string name="content_authority">com.example.hemraj.sunshine</string>
 
     <!-- Notification Format -->
     <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
@@ -195,5 +195,5 @@
     <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>
 
     // TODO: Get the SenderID from the Developer Console
-    <string name="gcm_defaultSenderId" translatable="false"></string>
+    <!--<string name="gcm_defaultSenderId" translatable="false"></string>-->
 </resources>
